Update index.html - tstat added

--- a/index.html
+++ b/index.html
@@ -543,11 +543,24 @@
       const months = ['1월','2월','3월','4월','5월','6월','7월','8월','9월','10월','11월','12월'];
       document.getElementById('date').textContent =
         `${months[now.getMonth()]} ${now.getDate()}일 ${days[now.getDay()]}`;
-
+      tstat = document.getElementById('tstat');
+      if ((hours == 17 && minutes >= 10) || (hours == 18 && minutes < 35)) {
+          tstat.textContent = '방과후';
+      } else if ((hours == 18 && minutes >= 35) || (hours == 19 && minutes < 50)) {
+          tstat.textContent = '저녁 시간';
+      } else if ((hours == 19 && minutes >= 50) || hours == 20 || (hours == 21 && minutes < 10)) {
+          tstat.textContent = '야자 1타임';
+      } else if ((hours == 21 && minutes >= 10 && minutes < 30)) {
+          tstat.textContent = '쉬는 시간';
+      } else if ((hours == 21 && minutes >= 30) || (hours == 22 && minutes < 50)) {
+          tstat.textContent = '야자 2타임';
+      } else if ((hours == 22 && minutes >= 50)) {
+          tstat.textContent = '끝.';
+      }
       const hoursDeg = (now.getHours() % 12) * 30 + (now.getMinutes() * 0.5);
       const minutesDeg = now.getMinutes() * 6 + (now.getSeconds() * 0.1);
       const secondsDeg = now.getSeconds() * 6;
-      document.getElementById('hourHand').style.transform   = `translateX(-50%) rotate(${hoursDeg}deg)`;
+      document.getElementById('hourHand').style.transform   = `translateX(-50%) rotate(${hoursDeg      }deg)`;
       document.getElementById('minuteHand').style.transform = `translateX(-50%) rotate(${minutesDeg}deg)`;
       document.getElementById('secondHand').style.transform = `translateX(-50%) rotate(${secondsDeg}deg)`;
     }
