--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <span id="hours">00</span>:<span id="minutes">00</span><span class="seconds" id="seconds">00</span>
       </div>
       <div class="date-display" id="date">MONDAY, JANUARY 1</div>
+      <div class="tstat" id="tstat">
     </div>
   </div>
 
