--- a/index.html
+++ b/index.html
@@ -545,17 +545,17 @@
       document.getElementById('date').textContent =
         `${months[now.getMonth()]} ${now.getDate()}일 ${days[now.getDay()]}`;
       tstat = document.getElementById('tstat');
-      if ((hours == 17 && minutes >= 10) || (hours == 18 && minutes < 35)) {
+      if ((h == 17 && m >= 10) || (h == 18 && m < 35)) {
           tstat.textContent = '방과후';
-      } else if ((hours == 18 && minutes >= 35) || (hours == 19 && minutes < 50)) {
+      } else if ((h == 18 && m >= 35) || (h == 19 && m < 50)) {
           tstat.textContent = '저녁 시간';
-      } else if ((hours == 19 && minutes >= 50) || hours == 20 || (hours == 21 && minutes < 10)) {
+      } else if ((h == 19 && m >= 50) || h == 20 || (h == 21 && m < 10)) {
           tstat.textContent = '야자 1타임';
-      } else if ((hours == 21 && minutes >= 10 && minutes < 30)) {
+      } else if ((h == 21 && m >= 10 && m < 30)) {
           tstat.textContent = '쉬는 시간';
-      } else if ((hours == 21 && minutes >= 30) || (hours == 22 && minutes < 50)) {
+      } else if ((h == 21 && m >= 30) || (h == 22 && m < 50)) {
           tstat.textContent = '야자 2타임';
-      } else if ((hours == 22 && minutes >= 50)) {
+      } else if ((h == 22 && m >= 50)) {
           tstat.textContent = '끝.';
       }
       const hoursDeg = (now.getHours() % 12) * 30 + (now.getMinutes() * 0.5);
