--- a/index.html
+++ b/index.html
@@ -135,38 +135,53 @@
 
     /* ===================== 자석 생성 ===================== */
     function createMagnets() {
-      const container = document.getElementById('magnetContainer');
-      const rows = 6, cols = 5, size = 50, gap = 15;
-      let n = 1;
-
-      for (let r = 0; r < rows; r++) {
-        for (let c = 0; c < cols; c++) {
-          if (n > 31) break;
-          if (n === 12) { n++; if (n > 31) break; }
-
-          const x = c * (size + gap) + 50;
-          const y = r * (size + gap) + 500;
-          gridPos[n] = { left: x, top: y };
-
-          const m = document.createElement('div');
-          m.className = 'magnet';
-          m.textContent = n;
-          m.dataset.number = n;
-          m.style.left = x + 'px';
-          m.style.top  = y + 'px';
-
-          container.appendChild(m);
-          addDragFunctionality(m);
-          n++;
-        }
-      }
-
-      const total = document.querySelectorAll('.magnet').length;
-      const tc = document.getElementById('total-count');
-      if (tc) tc.textContent = `${total}명`;
-
-      updateMagnetOutline();
+    const container = document.getElementById('magnetContainer');
+    const rows = 6, cols = 5, size = 50, gap = 15;
+    let n = 1;
+  
+    // 번호대별 색상 클래스 선택
+    function getColorClass(num) {
+      if (num >= 1 && num <= 6)   return 'color-red';
+      if (num >= 7 && num <= 11)  return 'color-orange';
+      if (num >= 13 && num <= 18) return 'color-yellow';
+      if (num >= 19 && num <= 24) return 'color-green';
+      if (num >= 25 && num <= 30) return 'color-blue';
+      if (num === 31)             return 'color-purple';
+      return '';
     }
+  
+    for (let r = 0; r < rows; r++) {
+      for (let c = 0; c < cols; c++) {
+        if (n > 31) break;
+        if (n === 12) { n++; if (n > 31) break; } // 12번 건너뛰기
+  
+        const x = c * (size + gap) + 50;
+        const y = r * (size + gap) + 500;
+        gridPos[n] = { left: x, top: y };
+  
+        const m = document.createElement('div');
+        m.className = 'magnet';
+        const colorClass = getColorClass(n);
+        if (colorClass) m.classList.add(colorClass);
+  
+        m.textContent = n;
+        m.dataset.number = n;
+        m.style.left = x + 'px';
+        m.style.top  = y + 'px';
+  
+        container.appendChild(m);
+        addDragFunctionality(m);
+        n++;
+      }
+    }
+  
+    // 자리표 제외한 실제 총원 표기
+    const total = container.querySelectorAll('.magnet:not(.placeholder)').length;
+    const tc = document.getElementById('total-count');
+    if (tc) tc.textContent = `${total}명`;
+  
+    updateMagnetOutline();
+  }
 
     /* ===================== 외곽선(자리표 제외) ===================== */
     function ensureMagnetOutline() {
