--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
   
     // 번호대별 색상 클래스 선택
     function getColorClass(num) {
-      if (num >= 1 && num <= 6)   return 'color-red';
-      if (num >= 7 && num <= 11)  return 'color-orange';
-      if (num >= 13 && num <= 18) return 'color-yellow';
-      if (num >= 19 && num <= 24) return 'color-green';
-      if (num >= 25 && num <= 30) return 'color-blue';
-      if (num === 31)             return 'color-purple';
+      if (num >= 1 && num <= 5)   return 'color-red';
+      if (num >= 6 && num <= 10)  return 'color-orange';
+      if (num >= 11 && num <= 16) return 'color-yellow';
+      if (num >= 17 && num <= 21) return 'color-green';
+      if (num >= 21 && num <= 26) return 'color-blue';
+      if (num >= 27 && num <= 31) return 'color-purple';
       return '';
     }
   
