--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
           tstat.textContent = '아침 시간';
       } else if (h == 8 && m >= 10 && m < 50) {
           tstat.textContent = '아침 자습';
-      }else if ((h == 17 && (m >= 10 && m < 50)) {
+      }else if (h == 17 && (m >= 10 && m < 50)) {
           tstat.textContent = '방과후 1타임';
       } else if (h == 17 && (m >= 50 && m < 55)) {
         tstat.textContent = '쉬는 시간';
