--- a/index.html
+++ b/index.html
@@ -573,6 +573,8 @@
           tstat.textContent = '아침 시간';
       } else if (h == 8 && m >= 10 && m < 50) {
           tstat.textContent = '아침 자습';
+      } else if (h == 8 && m >= 50) {
+          tstat.textContent = '아침 조회';
       }else if (h == 17 && (m >= 10 && m < 50)) {
           tstat.textContent = '방과후 1타임';
       } else if (h == 17 && (m >= 50 && m < 55)) {
@@ -590,9 +592,13 @@
       } else if (h == 22 && m == 49) {
           if (s >= 50) {
               tstat.textContent = 60 - s;
+          } else {
+            tstat.textContent = '야자 2타임';
           }
       } else if (h == 22 && m >= 50) {
           tstat.textContent = '끝.';
+      } else {
+          tstat.textContent = '';
       }
       const hoursDeg = (now.getHours() % 12) * 30 + (now.getMinutes() * 0.5);
       const minutesDeg = now.getMinutes() * 6 + (now.getSeconds() * 0.1);
