--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
   <link rel="stylesheet" href="main.css">
   <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.x/dist/index.umd.js"></script>
   <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js"></script>
+  <style>
+    /* Floating Action Button (게임) */
+    .fab-container { position: fixed; right: 24px; bottom: 24px; z-index: 2000; }
+    .fab {
+      width: 64px; height: 64px; border-radius: 50%;
+      background: #2a2a2a; border: 1px solid rgba(255,255,255,0.15);
+      display: grid; place-items: center; cursor: pointer;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.35);
+      transition: transform .15s ease, box-shadow .15s ease, background .15s ease;
+    }
+    .fab:hover { transform: translateY(-1px); background: #333; }
+    .fab:active { transform: translateY(0); }
+    .fab img { width: 32px; height: 32px; display: block; }
+
+    .fab-menu { position: absolute; right: 0; bottom: 72px; display: none; gap: 8px; flex-direction: column; }
+    .fab-menu.open { display: flex; }
+    .fab-item {
+      min-width: 140px; padding: 10px 14px; font-size: 14px; text-align: left;
+      color: #fff; background: rgba(20,20,20,0.95);
+      border: 1px solid rgba(255,255,255,0.12); border-radius: 10px;
+      cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.35);
+    }
+    .fab-item:hover { background: rgba(40,40,40,0.95); }
+  </style>
 </head>
 <body>
   <!-- Magnet Container -->
@@ -96,6 +120,16 @@
   <button class="fullscreen-btn" onclick="toggleFullscreen()">전체화면</button>
   <button class="exit-fullscreen-btn" onclick="exitFullscreen()">✕</button>
 
+  <!-- 게임 버튼 -->
+  <div class="fab-container" aria-live="polite">
+    <button id="gameFab" class="fab" aria-haspopup="true" aria-expanded="false" aria-controls="gameMenu" title="게임 메뉴">
+      <img src="src/game.png" alt="게임"/>
+    </button>
+    <div id="gameMenu" class="fab-menu" role="menu">
+      <button class="fab-item" role="menuitem" id="gomokuItem">오목 게임</button>
+    </div>
+  </div>
+   
   <!-- 이유 입력 다이얼로그 -->
   <div id="reasonOverlay" class="dialog-overlay" hidden>
     <div class="dialog" role="dialog" aria-modal="true" aria-labelledby="reasonTitle">
@@ -626,6 +660,45 @@
       const sh = document.getElementById('secondHand');
       if (sh) sh.style.transition = 'transform 0.5s cubic-bezier(0.4, 0.0, 0.2, 1)';
     }, 1000);
+  </script>
+  <script>
+    // 게임 FAB 토글 및 메뉴 동작
+    (function () {
+      const fab = document.getElementById('gameFab');
+      const menu = document.getElementById('gameMenu');
+      const gomoku = document.getElementById('gomokuItem');
+
+      if (!fab || !menu) return;
+
+      function closeMenu() {
+        menu.classList.remove('open');
+        fab.setAttribute('aria-expanded', 'false');
+      }
+
+      function toggleMenu(e) {
+        e.stopPropagation();
+        const isOpen = menu.classList.toggle('open');
+        fab.setAttribute('aria-expanded', String(isOpen));
+      }
+
+      fab.addEventListener('click', toggleMenu);
+      document.addEventListener('click', (e) => {
+        if (!menu.classList.contains('open')) return;
+        const t = e.target;
+        if (t === fab || fab.contains(t) || menu.contains(t)) return;
+        closeMenu();
+      });
+      document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape') closeMenu();
+      });
+
+      if (gomoku) {
+        gomoku.addEventListener('click', () => {
+          // gomoku.html로 이동
+          window.location.href = 'gomoku.html';
+        });
+      }
+    })();
   </script>
 </body>
 </html>
