--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.35);
     }
     .fab-item:hover { background: rgba(40,40,40,0.95); }
+
+    /* Fireworks overlay container */
+    .fireworks { position: fixed; inset: 0; pointer-events: none; z-index: 1500; }
   </style>
 </head>
 <body>
@@ -126,9 +129,13 @@
       <img src="src/game.png" alt="게임"/>
     </button>
     <div id="gameMenu" class="fab-menu" role="menu">
+      <button class="fab-item" role="menuitem" id="fireworksItem">폭죽 터뜨리기</button>
       <button class="fab-item" role="menuitem" id="gomokuItem">오목 게임</button>
     </div>
   </div>
+
+  <!-- Fireworks canvas container -->
+  <div class="fireworks" aria-hidden="true"></div>
    
   <!-- 이유 입력 다이얼로그 -->
   <div id="reasonOverlay" class="dialog-overlay" hidden>
@@ -667,6 +674,9 @@
       const fab = document.getElementById('gameFab');
       const menu = document.getElementById('gameMenu');
       const gomoku = document.getElementById('gomokuItem');
+      const fireworksBtn = document.getElementById('fireworksItem');
+      let menuFireworks = null;
+      let fwStopTimer = null;
 
       if (!fab || !menu) return;
 
@@ -696,6 +706,22 @@
         gomoku.addEventListener('click', () => {
           // gomoku.html로 이동
           window.location.href = 'gomoku.html';
+        });
+      }
+
+      if (fireworksBtn) {
+        fireworksBtn.addEventListener('click', () => {
+          const container = document.querySelector('.fireworks');
+          if (!container || !window.Fireworks) return;
+          if (!menuFireworks) menuFireworks = new Fireworks.default(container);
+          menuFireworks.start();
+          if (fwStopTimer) clearTimeout(fwStopTimer);
+          fwStopTimer = setTimeout(() => {
+            try {
+              if (menuFireworks && typeof menuFireworks.stop === 'function') menuFireworks.stop(true);
+            } catch (_) {}
+          }, 3500);
+          closeMenu();
         });
       }
     })();
