--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </div>
 
   <div class="ultraman">
-    <img src="ultraman.png" id = "ultraman">
+    <img src="Ultra_Jiwon.png" id = "ultraman">
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
