--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
       }
     })();
 
-    $(".clock-container")
+    $(".analog-clock")
     .on("mousedown touchstart", function () {
       $(".ultraman").show();
     })
