--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     </button>
     <div id="gameMenu" class="fab-menu" role="menu">
       <button class="fab-item" role="menuitem" id="fireworksItem">폭죽 터뜨리기</button>
+      <button class="fab-item" role="menuitem" id="speedTest">반응 속도 대결</button>
       <button class="fab-item" role="menuitem" id="gomokuItem">오목 게임</button>
     </div>
   </div>
@@ -772,6 +773,7 @@
       const fab = document.getElementById('gameFab');
       const menu = document.getElementById('gameMenu');
       const gomoku = document.getElementById('gomokuItem');
+      const speedt = document.getElementById('speedTest');
       const fireworksBtn = document.getElementById('fireworksItem');
       let menuFireworks = null;
       let fwStopTimer = null;
@@ -805,7 +807,11 @@
           window.location.href = 'gomoku.html';
         });
       }
-
+      if (speedt) {
+        speedt.addEventListener('click', () => {
+          window.location.href = 'speed.html';
+        });
+      }
       if (fireworksBtn) {
         fireworksBtn.addEventListener('click', () => {
           const container = document.querySelector('.fireworks');
