--- a/circle.html
+++ b/circle.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Circle Duel — 누가 더 완벽한 원?</title>
+  <title>원 그리기</title>
   <style>
   :root{
     --bg:#ffffff; --panel:#ffffff; --text:#111827; --muted:#6b7280; --line:#e5e7eb;
@@ -58,7 +58,7 @@
 </head>
 <body>
   <header>
-    <h1>Circle Duel — 더 완벽한 원을 그리는 쪽이 승리!</h1>
+    <h1>원 그리기</h1>
     <div class="sub">좌/우 패널에 원을 그리세요. 제한 시간 안에 더 <b>원형에 가까운</b> 사람이 이깁니다. (터치 기기에서는 두 사람이 동시에 가능)</div>
   </header>
 
@@ -113,7 +113,7 @@
         <li>시작/끝점의 <b>닫힘 정도</b>와 원 둘레를 얼마나 <b>커버</b>했는지도 반영합니다.</li>
         <li>최종 점수는 대략 <code>exp(-6·오차) × exp(-0.8·닫힘오차) × coverage</code>를 0–100으로 환산합니다.</li>
       </ul>
-      <div>힌트: 크게, 한 번에 매끄럽게 그릴수록 유리합니다. 너무 작은 원(반지름 &lt; 30px)은 불이익이 있어요.</div>
+      <div>힌트: 크게, 한 번에 매끄럽게 그릴수록 유리합니다. 너무 작은 원(반지름 &lt; 30px)은 불이익이 있음.</div>
     </details>
   </div>
 
