이유 어쩌구 추가함

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
     <div class="dialog" role="dialog" aria-modal="true" aria-labelledby="reasonTitle">
       <div class="dialog-title" id="reasonTitle">어떤 이유인가요?</div>
       <textarea id="reasonInput" placeholder="예: 병원 예약, 상담, 급한 용무 등" rows="4" ></textarea>
+      <div id="reasonQuickWrap" class="reason-quick">
+        <div id="reasonButtons" class="reason-quick__grid"></div>
+      </div>
       <div class="actions">
         <button id="reasonCancel" type="button">취소</button>
         <button id="reasonSave" class="primary" type="button">저장</button>
